err/pyhatch.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyHatch-0.0.17.egg-info'...
Listing './lib/python3.5/site-packages/future'...
Listing './lib/python3.5/site-packages/future/backports'...
Listing './lib/python3.5/site-packages/future/backports/email'...
Listing './lib/python3.5/site-packages/future/backports/email/mime'...
Listing './lib/python3.5/site-packages/future/backports/html'...
Listing './lib/python3.5/site-packages/future/backports/http'...
Listing './lib/python3.5/site-packages/future/backports/test'...
Listing './lib/python3.5/site-packages/future/backports/urllib'...
Listing './lib/python3.5/site-packages/future/backports/xmlrpc'...
Listing './lib/python3.5/site-packages/future/builtins'...
Listing './lib/python3.5/site-packages/future/moves'...
Listing './lib/python3.5/site-packages/future/moves/dbm'...
Listing './lib/python3.5/site-packages/future/moves/html'...
Listing './lib/python3.5/site-packages/future/moves/http'...
Listing './lib/python3.5/site-packages/future/moves/test'...
Listing './lib/python3.5/site-packages/future/moves/tkinter'...
Listing './lib/python3.5/site-packages/future/moves/urllib'...
Listing './lib/python3.5/site-packages/future/moves/xmlrpc'...
Listing './lib/python3.5/site-packages/future/standard_library'...
Listing './lib/python3.5/site-packages/future/tests'...
Listing './lib/python3.5/site-packages/future/types'...
Listing './lib/python3.5/site-packages/future/utils'...
Listing './lib/python3.5/site-packages/future-0.16.0.egg-info'...
Listing './lib/python3.5/site-packages/libfuturize'...
Listing './lib/python3.5/site-packages/libfuturize/fixes'...
Listing './lib/python3.5/site-packages/libpasteurize'...
Listing './lib/python3.5/site-packages/libpasteurize/fixes'...
Listing './lib/python3.5/site-packages/past'...
Listing './lib/python3.5/site-packages/past/builtins'...
Listing './lib/python3.5/site-packages/past/tests'...
Listing './lib/python3.5/site-packages/past/translation'...
Listing './lib/python3.5/site-packages/past/types'...
Listing './lib/python3.5/site-packages/past/utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyhatch'...
Listing './lib/python3.5/site-packages/pyhatch/doc_templates'...
Compiling './lib/python3.5/site-packages/pyhatch/doc_templates/build_all_html.py'...
***   File "./lib/python3.5/site-packages/pyhatch/doc_templates/build_all_html.py", line 19
    print command
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyhatch/examples'...
Compiling './lib/python3.5/site-packages/pyhatch/hatch_gui.py'...
***   File "./lib/python3.5/site-packages/pyhatch/hatch_gui.py", line 414
    print "Master reconfigured... make resize adjustments"
                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyhatch/pypi_version.py'...
***   File "./lib/python3.5/site-packages/pyhatch/pypi_version.py", line 71
    print 'Versions for',pkg_name
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyhatch/templates'...
Compiling './lib/python3.5/site-packages/pyhatch/templates/Class_Te_st_File.py'...
***   File "./lib/python3.5/site-packages/pyhatch/templates/Class_Te_st_File.py", line 35
    from {{projName_lower}}.{{mainPyFilePrefix}} import {{func_or_class_name}}
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyhatch/templates/Function_Te_st_File.py'...
***   File "./lib/python3.5/site-packages/pyhatch/templates/Function_Te_st_File.py", line 13
    from {{projName_lower}}.{{mainPyFilePrefix}} import {{func_or_class_name}}
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyhatch/templates/Module_Class.py'...
***   File "./lib/python3.5/site-packages/pyhatch/templates/Module_Class.py", line 32
    class {{mainClassName}}(object):
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyhatch/templates/Module_Function.py'...
***   File "./lib/python3.5/site-packages/pyhatch/templates/Module_Function.py", line 32
    def {{mainFunctionName}}():
        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyhatch/templates/example_1.py'...
***   File "./lib/python3.5/site-packages/pyhatch/templates/example_1.py", line 9
    from {{projName_lower}}.{{mainPyFilePrefix}} import {{func_or_class_name}}
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyhatch/tests'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
